[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.38, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.14, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.258824, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_select"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 2 )

[node name="StartScreen" type="Node2D" parent="."]
visible = false

[node name="GameTitleLabel" type="Label" parent="StartScreen"]
margin_left = 111.5
margin_top = 161.5
margin_right = 675.5
margin_bottom = 252.5
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 282, 22 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.258824, 0, 0, 1 )
text = "THE SILENT PROTECTOR SIMULATOR"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="StartScreen"]
margin_left = 358.72
margin_top = 396.85
margin_right = 438.72
margin_bottom = 432.85
rect_pivot_offset = Vector2( 40, 18 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
shortcut = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScreen" type="Node2D" parent="."]
visible = false

[node name="EndGameMessageLabel" type="Label" parent="EndScreen"]
margin_left = 111.5
margin_top = 57.0
margin_right = 675.5
margin_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 282, 22 )
custom_fonts/font = SubResource( 1 )
text = "The Army is proud of you!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="EndScreen"]
margin_left = 111.0
margin_top = 247.919
margin_right = 679.743
margin_bottom = 291.919
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 282, 22 )
custom_fonts/font = SubResource( 1 )
text = "Points: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartGameButton" type="Button" parent="EndScreen"]
margin_left = 358.72
margin_top = 396.85
margin_right = 438.72
margin_bottom = 432.85
rect_pivot_offset = Vector2( 40, 18 )
custom_fonts/font = SubResource( 2 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartScreen/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="EndScreen/RestartGameButton" to="." method="_on_RestartButton_pressed"]
